syntax = "proto3";

package errors;

import "errors/errors.proto";

option go_package = "api/errors;errors";

enum Reason {
  // 设置缺省错误码
  option (errors.default_code) = 500;

  // 未知错误
  UNKNOWN = 0;

  // 服务异常
  SERVER = 100001 [(errors.code) = 500];

  // 数据校验失败
  DATA_VALIDATE = 201001 [(errors.code) = 422];
  // 数据查询失败
  DATA_SELECT = 201002 [(errors.code) = 500];
  // 数据已存在
  DATA_ALREADY_EXISTS = 201003 [(errors.code) = 400];
  // 数据不存在
  DATA_NOT_FOUND = 201004 [(errors.code) = 404];
  // 新增数据失败
  DATA_ADD = 201005 [(errors.code) = 500];
  // 更新数据失败
  DATA_UPDATE = 201006 [(errors.code) = 500];
  // 数据删除失败
  DATA_DELETE = 201007 [(errors.code) = 500];
  // 数据资源不存在
  DATA_RESOURCE_NOT_FOUND = 201008 [(errors.code) = 404];
  // 数据属性更新失败
  DATA_UPDATE_FIELD = 201009 [(errors.code) = 500];

  // 无效ID值
  ID_INVALID_VALUE = 202001 [(errors.code) = 404];
  // 无效的执行指令
  COMMAND_INVALID_NOT_FOUND = 202002 [(errors.code) = 400];// 请求参数错误
  // 请求参数错误
  REQUEST_PARAMS = 202003 [(errors.code) = 400];

  // 未登录
  NOT_LOGIN = 203001 [(errors.code) = 401];
  // 没有访问权限
  NOT_VISIT_AUTH = 203002 [(errors.code) = 401];
}
